--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portfolio Marek-Dimitri Abou Fadel" />
   <link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/2ca01e49a3.js" crossorigin="anonymous"></script>
 
 
 
