--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portfolio Marek-Dimitri Abou Fadel" />
   <base href="/">
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css" />
   <script src="https://kit.fontawesome.com/2ca01e49a3.js" crossorigin="anonymous"></script>
+
+
 
 
 
   <title>Portfolio</title>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0; background: rgb(236, 231, 215);
+overflow: hidden;
+overflow-y: scroll; box-sizing: border-box;
+    text-decoration: none; ">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
